src/ui/k8s/ingress.yaml
###############################################################################
# Ingress
#
# Exposes the application externally via an Ingress Controller.
#
# Requests:
#
# http://ui.local
#
# are routed to:
#
# Service -> ui
###############################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ui
  namespace: ui

spec:
  ingressClassName: nginx

  rules:
    - host: ui.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: ui

                port:
                  number: 80
